Features : - Better indication for swipe actions. - Better dark theme layouts. - Adding masks for money and date inputs. - Cleaner selecition mode. - Change of some plugins and gradle versions. - Change of layout of lists. - Injection of Dispatchers - Initial implementation of callbacks of persistence of items. - UX improvements
Bugfixes :
- Keyboard now is hiding when go or return throught fragments.

Removed :
- Theme selection (dark theme), that will be inserted later on settings drawer

--- a/app/src/main/res/layout/bottom_sheet_new_product.xml
+++ b/app/src/main/res/layout/bottom_sheet_new_product.xml
@@ -13,7 +13,7 @@
         android:layout_height="wrap_content"
         android:background="@drawable/new_product_bottom_sheet_confirmation_background"
         app:layout_constraintTop_toTopOf="parent"
-        android:backgroundTint="@color/green_dark"
+        android:backgroundTint="@color/primary_green"
         app:layout_constraintStart_toStartOf="parent">
 
         <TextView
