--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,19 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources xmlns:tools="http://schemas.android.com/tools">
-    <color name="purple_200">#FFBB86FC</color>
-    <color name="purple_700">#FF3700B3</color>
-    <color name="teal_200">#FF03DAC5</color>
+    <color name="primary_green">#96AC60</color>
+    <color name="secondary_green">#606D40</color>
+    <color name="secundary_green_transparent">#4D606D40</color>
     <color name="black">#FF000000</color>
-    <color name="white">#FFFFFFFF</color>
-    <color name="green">#226327</color>
-    <color name="green_light">#529151</color>
-    <color name="green_light_transparent">#4D529151</color>
-    <color name="white_green">#4DDCE3DD</color>
-    <color name="green_dark">#003800</color>
-    <color name="gray">#7A807B</color>
     <color name="dark_gray">#333333</color>
-    <color name="delete_red">#BF0000</color>
+    <color name="gray">#7A807B</color>
     <color name="light_gray">#B1B3B1</color>
+    <color name="white">#FFFFFFFF</color>
+    <color name="delete_red">#BF0000</color>
 
-    <color name="mtrl_textinput_default_box_stroke_color" tools:override="true">@color/green_light_transparent</color>
+    <color name="mtrl_textinput_default_box_stroke_color" tools:override="true">@color/secundary_green_transparent</color>
 </resources>
