--- a/app/src/main/res/layout/fragment_new_cart.xml
+++ b/app/src/main/res/layout/fragment_new_cart.xml
@@ -4,17 +4,16 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:padding="12dp"
+    android:padding="8dp"
     tools:context=".view.fragments.NewCartFragment">
-
 
     <DatePicker
         android:id="@+id/date_picker"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:headerBackground="@color/green_dark"
+        android:headerBackground="@color/secondary_green"
         android:visibility="gone"
-        tools:visibility="visible"
+        tools:visibility="gone"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -31,7 +30,8 @@
             android:id="@+id/dialog_title"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_margin="12dp"
+            android:layout_margin="8dp"
+            android:textStyle="bold"
             android:text="@string/new_cart"
             android:textSize="24sp"
             app:layout_constraintStart_toStartOf="parent"
@@ -42,8 +42,8 @@
             style="@style/MyInputTextStyle"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginHorizontal="12dp"
             android:layout_marginTop="8dp"
+            android:layout_marginHorizontal="8dp"
             app:boxStrokeErrorColor="@color/delete_red"
             app:endIconMode="clear_text"
             app:layout_constraintStart_toStartOf="@id/dialog_title"
@@ -62,7 +62,7 @@
             style="@style/MyInputTextStyle"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginHorizontal="12dp"
+            android:layout_marginHorizontal="8dp"
             android:layout_marginTop="8dp"
             app:endIconDrawable="@drawable/ic_baseline_date_range_24"
             app:boxStrokeErrorColor="@color/delete_red"
@@ -79,27 +79,38 @@
                 android:maxLength="10" />
         </com.google.android.material.textfield.TextInputLayout>
 
+        <TextView
+            android:id="@+id/label_optional"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginEnd="18dp"
+            android:alpha="0.6"
+            android:text="(Opcional)"
+            app:layout_constraintEnd_toEndOf="@id/cart_date_layout"
+            app:layout_constraintTop_toBottomOf="@id/cart_date_layout" />
+
         <Button
             android:id="@+id/btn_cancel"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="12dp"
-            android:layout_marginEnd="12dp"
-            android:backgroundTint="@color/gray"
+            android:layout_marginEnd="8dp"
+            android:textColor="@color/gray"
+            style="@style/Widget.MaterialComponents.Button.TextButton"
             android:text="@string/cancel"
             app:layout_constraintEnd_toStartOf="@+id/btn_ok"
-            app:layout_constraintTop_toBottomOf="@+id/cart_date_layout" />
+            app:layout_constraintTop_toBottomOf="@+id/label_optional" />
 
         <Button
             android:id="@+id/btn_ok"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginEnd="24dp"
+            android:layout_marginEnd="16dp"
+            android:textStyle="bold"
             android:text="@string/save"
+            style="@style/Widget.MaterialComponents.Button.TextButton"
             app:layout_constraintBottom_toBottomOf="@+id/btn_cancel"
             app:layout_constraintEnd_toEndOf="@id/cart_date_layout" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
-
-
 </androidx.constraintlayout.widget.ConstraintLayout>
