--- a/app/src/main/res/layout/fragment_products.xml
+++ b/app/src/main/res/layout/fragment_products.xml
@@ -12,7 +12,7 @@
         android:layout_height="wrap_content"
         app:title="@string/app_name"
         style="@style/Widget.MaterialComponents.Toolbar.Primary"
-        android:background="@color/green_dark"
+        android:background="@color/primary_green"
         app:titleTextColor="@color/white"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -38,17 +38,29 @@
         android:layout_height="0dp"
         tools:listitem="@layout/product_item"
         app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
+        android:visibility="gone"
         app:layout_constraintTop_toBottomOf="@id/search_view"
         app:layout_constraintBottom_toTopOf="@id/cart_summary"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"/>
+
+    <ProgressBar
+        android:id="@+id/loading"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:indeterminate="true"
+        android:visibility="gone"
+        app:layout_constraintTop_toBottomOf="@id/toolbar"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintBottom_toTopOf="@id/cart_summary"/>
 
     <androidx.cardview.widget.CardView
         android:id="@+id/cart_summary"
         android:layout_width="match_parent"
         android:layout_height="90dp"
         app:cardCornerRadius="0dp"
-        app:cardBackgroundColor="@color/green_dark"
+        app:cardBackgroundColor="@color/primary_green"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent">
@@ -100,23 +112,27 @@
         android:layout_marginBottom="65dp"
         android:minHeight="48dp"
         android:src="@drawable/ic_add"
+        app:tint="@color/white"
+        android:backgroundTint="@color/secondary_green"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:tint="@color/white" />
+        app:layout_constraintEnd_toEndOf="parent" />
 
     <com.google.android.material.floatingactionbutton.FloatingActionButton
         android:id="@+id/closeSelection"
         android:visibility="gone"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginEnd="30dp"
+        android:layout_marginBottom="65dp"
+        android:minHeight="48dp"
         android:src="@drawable/ic_baseline_close_24"
         app:tint="@color/white"
+        android:backgroundTint="@color/secondary_green"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        android:layout_marginEnd="40dp"
-        android:layout_marginBottom="65dp"/>
+        app:layout_constraintEnd_toEndOf="parent"/>
 
     <include
+        android:id="@+id/empty_list"
         layout="@layout/empty_list"
         android:visibility="gone"/>
 
