--- a/app/src/main/res/menu/menu.xml
+++ b/app/src/main/res/menu/menu.xml
@@ -28,6 +28,13 @@
         app:showAsAction="always|collapseActionView"/>
 
     <item
+        android:id="@+id/select_all"
+        android:icon="@drawable/outline_check_box_24"
+        android:title="Select all"
+        android:visible="false"
+        app:showAsAction="never|collapseActionView"/>
+
+    <item
         android:id="@+id/night_mode"
         android:title="Night mode"
         android:icon="@drawable/ic_baseline_light_24"
