--- a/app/src/main/res/layout/fragment_new_cart.xml
+++ b/app/src/main/res/layout/fragment_new_cart.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:padding="8dp"
-    tools:context=".view.fragments.NewCartFragment">
+    tools:context="br.com.zamfir.comprarei.view.fragments.NewCartFragment">
 
     <DatePicker
         android:id="@+id/date_picker"
