--- a/app/src/main/res/layout/category_item.xml
+++ b/app/src/main/res/layout/category_item.xml
@@ -2,40 +2,40 @@
 <androidx.constraintlayout.widget.ConstraintLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="wrap_content"
+    android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:padding="12dp"
     xmlns:app="http://schemas.android.com/apk/res-auto">
-
-
-<!--    <com.google.android.material.imageview.ShapeableImageView
-        android:id="@+id/category_color"
-        android:layout_width="36dp"
-        android:layout_height="36dp"
-        app:shapeAppearanceOverlay="@style/roundedImageViewRounded"
-        android:src="@color/black"
-        app:strokeWidth="1dp"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintStart_toStartOf="parent"/>-->
 
     <ImageView
         android:id="@+id/category_color"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:src="@drawable/baseline_local_offer_24"
+        android:src="@drawable/category_icon_24"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintStart_toStartOf="parent"/>
 
     <TextView
-        android:layout_width="wrap_content"
+        android:id="@+id/category_name"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         tools:text="Teste de categoria"
         android:textSize="18sp"
-        android:layout_marginStart="18dp"
         android:textColor="@color/black"
+        android:layout_marginStart="36dp"
         app:layout_constraintStart_toEndOf="@id/category_color"
         app:layout_constraintTop_toTopOf="@id/category_color"
-        app:layout_constraintBottom_toBottomOf="@id/category_color"/>
+        app:layout_constraintBottom_toBottomOf="@id/category_color"
+        app:layout_constraintEnd_toEndOf="parent"/>
+
+    <com.google.android.material.divider.MaterialDivider
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="12dp"
+        app:layout_constraintStart_toStartOf="@id/category_color"
+        app:layout_constraintTop_toBottomOf="@id/category_name"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="@id/category_name"/>
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
