--- a/app/src/main/res/layout/cart_item.xml
+++ b/app/src/main/res/layout/cart_item.xml
@@ -18,6 +18,35 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintBottom_toBottomOf="parent"/>
 
+
+
+    <LinearLayout
+        android:id="@+id/category_place_holder"
+        android:layout_width="wrap_content"
+        android:layout_height="0dp"
+        android:visibility="gone"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent">
+
+        <ImageView
+            android:id="@+id/category_color"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:src="@drawable/category_icon_24"
+            android:layout_gravity="center"
+            android:layout_marginHorizontal="12dp"
+            app:layout_constraintTop_toTopOf="@id/cart_name"
+            app:layout_constraintStart_toEndOf="@id/cart_name"/>
+
+        <com.google.android.material.divider.MaterialDivider
+            android:layout_width="1dp"
+            android:layout_height="match_parent"
+            android:layout_marginVertical="12dp"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"/>
+    </LinearLayout>
+
     <TextView
         android:id="@+id/cart_name"
         android:layout_width="wrap_content"
@@ -26,7 +55,7 @@
         android:layout_marginTop="12dp"
         android:layout_marginStart="16dp"
         tools:text="Cart"
-        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintStart_toEndOf="@id/category_place_holder"
         app:layout_constraintTop_toTopOf="parent"/>
 
     <CheckBox
@@ -59,7 +88,7 @@
 
     <com.google.android.material.divider.MaterialDivider
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="wrap_content"
         android:layout_marginTop="12dp"
         android:layout_marginHorizontal="16dp"
         app:layout_constraintStart_toStartOf="@id/cartDate"
