--- a/app/src/main/res/layout/dialog_new_category.xml
+++ b/app/src/main/res/layout/dialog_new_category.xml
@@ -20,7 +20,7 @@
         android:id="@+id/dialog_title"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="New category"
+        android:text="@string/new_category"
         android:textColor="@color/white"
         android:textSize="24sp"
         android:layout_margin="12dp"
@@ -77,7 +77,7 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="12dp"
-        android:text="Select category color"
+        android:text="@string/select_category_color_btn"
         android:layout_marginEnd="12dp"
         app:layout_constraintStart_toEndOf="@id/image_category_color"
         app:layout_constraintBottom_toBottomOf="@id/image_category_color"
