--- a/app/src/main/res/layout/fragment_new_cart.xml
+++ b/app/src/main/res/layout/fragment_new_cart.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:padding="8dp"
+    android:padding="16dp"
     tools:context="br.com.zamfir.comprarei.view.fragments.NewCartFragment">
 
     <DatePicker
@@ -30,12 +30,19 @@
             android:id="@+id/dialog_title"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_margin="8dp"
             android:textStyle="bold"
             android:text="@string/new_cart"
             android:textSize="24sp"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="(Required)"
+            android:textSize="12sp"
+            app:layout_constraintBottom_toTopOf="@id/cart_name_layout"
+            app:layout_constraintEnd_toEndOf="@id/cart_name_layout"/>
 
         <com.google.android.material.textfield.TextInputLayout
             android:id="@+id/cart_name_layout"
@@ -43,11 +50,11 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="8dp"
-            android:layout_marginHorizontal="8dp"
             app:boxStrokeErrorColor="@color/delete_red"
             app:endIconMode="clear_text"
             app:layout_constraintStart_toStartOf="@id/dialog_title"
-            app:layout_constraintTop_toBottomOf="@id/dialog_title">
+            app:layout_constraintTop_toBottomOf="@id/dialog_title"
+            app:layout_constraintBottom_toTopOf="@id/cart_store_layout">
 
             <com.google.android.material.textfield.TextInputEditText
                 android:id="@+id/cart_name"
@@ -56,19 +63,38 @@
                 android:hint="@string/name" />
         </com.google.android.material.textfield.TextInputLayout>
 
+        <com.google.android.material.textfield.TextInputLayout
+            android:id="@+id/cart_store_layout"
+            style="@style/MyInputTextStyle"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="8dp"
+            app:boxStrokeErrorColor="@color/delete_red"
+            app:endIconMode="custom"
+            app:layout_constraintStart_toStartOf="@id/cart_name_layout"
+            app:layout_constraintTop_toBottomOf="@id/cart_name_layout"
+            app:layout_constraintEnd_toEndOf="@id/cart_name_layout"
+            app:layout_constraintBottom_toTopOf="@id/cart_date_layout">
+
+            <com.google.android.material.textfield.TextInputEditText
+                android:id="@+id/cartStore"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:hint="@string/store_hint" />
+        </com.google.android.material.textfield.TextInputLayout>
 
         <com.google.android.material.textfield.TextInputLayout
             android:id="@+id/cart_date_layout"
             style="@style/MyInputTextStyle"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginHorizontal="8dp"
             android:layout_marginTop="8dp"
             app:endIconDrawable="@drawable/ic_baseline_date_range_24"
-            app:boxStrokeErrorColor="@color/delete_red"
             app:endIconMode="custom"
-            app:layout_constraintStart_toStartOf="@id/cart_name_layout"
-            app:layout_constraintTop_toBottomOf="@id/cart_name_layout">
+            app:layout_constraintStart_toStartOf="@id/cart_store_layout"
+            app:layout_constraintTop_toBottomOf="@id/cart_store_layout"
+            app:layout_constraintEnd_toEndOf="@id/cart_store_layout"
+            app:layout_constraintBottom_toTopOf="@id/category_menu_item">
 
             <com.google.android.material.textfield.TextInputEditText
                 android:id="@+id/cartDate"
@@ -79,15 +105,26 @@
                 android:maxLength="10" />
         </com.google.android.material.textfield.TextInputLayout>
 
-        <TextView
-            android:id="@+id/label_optional"
-            android:layout_width="wrap_content"
+        <com.google.android.material.textfield.TextInputLayout
+            android:id="@+id/category_menu_item"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginEnd="18dp"
-            android:alpha="0.6"
-            android:text="(Opcional)"
-            app:layout_constraintEnd_toEndOf="@id/cart_date_layout"
-            app:layout_constraintTop_toBottomOf="@id/cart_date_layout" />
+            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
+            app:startIconDrawable="@drawable/category_icon_24"
+            app:startIconTint="@color/black"
+            android:layout_marginTop="8dp"
+            android:hint="@string/select_category_hint"
+            app:layout_constraintStart_toStartOf="@id/cart_date_layout"
+            app:layout_constraintTop_toBottomOf="@id/cart_date_layout"
+            app:layout_constraintEnd_toEndOf="@id/cart_date_layout">
+
+            <AutoCompleteTextView
+                android:id="@+id/categories_menu"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:inputType="none"/>
+
+        </com.google.android.material.textfield.TextInputLayout>
 
         <Button
             android:id="@+id/btn_cancel"
@@ -98,19 +135,20 @@
             android:textColor="@color/gray"
             style="@style/Widget.MaterialComponents.Button.TextButton"
             android:text="@string/cancel"
-            app:layout_constraintEnd_toStartOf="@+id/btn_ok"
-            app:layout_constraintTop_toBottomOf="@+id/label_optional" />
+            app:layout_constraintTop_toBottomOf="@id/category_menu_item"
+            app:layout_constraintEnd_toStartOf="@id/btn_ok"/>
 
         <Button
             android:id="@+id/btn_ok"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginEnd="16dp"
+            android:layout_marginTop="12dp"
             android:textStyle="bold"
             android:text="@string/save"
             style="@style/Widget.MaterialComponents.Button.TextButton"
-            app:layout_constraintBottom_toBottomOf="@+id/btn_cancel"
-            app:layout_constraintEnd_toEndOf="@id/cart_date_layout" />
+            app:layout_constraintTop_toBottomOf="@id/category_menu_item"
+            app:layout_constraintEnd_toEndOf="@id/category_menu_item"
+            />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 </androidx.constraintlayout.widget.ConstraintLayout>
