--- a/app/src/main/res/layout/dialog_new_category.xml
+++ b/app/src/main/res/layout/dialog_new_category.xml
@@ -3,28 +3,17 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:padding="16dp"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
-
-
-    <ImageView
-        android:id="@+id/dialog_toolbar"
-        android:layout_width="match_parent"
-        android:layout_height="?attr/actionBarSize"
-        android:background="?attr/colorPrimary"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"/>
 
     <TextView
         android:id="@+id/dialog_title"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/new_category"
-        android:textColor="@color/white"
+        android:textStyle="bold"
         android:textSize="24sp"
-        android:layout_margin="12dp"
-        app:layout_constraintBottom_toBottomOf="@id/dialog_toolbar"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintStart_toStartOf="parent"/>
 
@@ -33,25 +22,24 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:src="@drawable/ic_delete_24"
-        android:background="?attr/colorPrimary"
-        android:layout_marginEnd="12dp"
+        android:layout_margin="12dp"
+        android:background="@color/white"
         android:visibility="gone"
         tools:visibility="visible"
+        app:tint="?attr/colorPrimary"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintBottom_toBottomOf="@id/dialog_toolbar"/>
+        app:layout_constraintTop_toTopOf="parent"/>
 
     <com.google.android.material.textfield.TextInputLayout
         android:id="@+id/category_name_layout"
         style="@style/MyInputTextStyle"
         android:layout_width="match_parent"
         android:layout_height="60dp"
-        android:layout_marginHorizontal="12dp"
-        android:layout_marginTop="16dp"
+        android:layout_marginTop="12dp"
         android:hint="@string/name"
         app:endIconMode="clear_text"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/dialog_toolbar">
+        app:layout_constraintTop_toBottomOf="@id/dialog_title">
 
         <com.google.android.material.textfield.TextInputEditText
             android:id="@+id/category_name"
@@ -66,23 +54,25 @@
         android:layout_width="32dp"
         android:layout_height="32dp"
         android:src="@drawable/category_icon_24"
-        android:layout_marginTop="32dp"
+        android:layout_marginTop="20dp"
+        android:layout_marginEnd="14dp"
         app:tint="@color/white"
         tools:tint="@color/black"
+        android:visibility="gone"
+        tools:visibility="visible"
         app:layout_constraintStart_toStartOf="@id/category_name_layout"
-        app:layout_constraintTop_toBottomOf="@id/category_name_layout"/>
+        app:layout_constraintTop_toBottomOf="@id/category_name_layout"
+        app:layout_constraintEnd_toStartOf="@id/color_select"/>
 
     <Button
         android:id="@+id/color_select"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginStart="12dp"
         android:text="@string/select_category_color_btn"
-        android:layout_marginEnd="12dp"
+        android:layout_marginTop="12dp"
         app:layout_constraintStart_toEndOf="@id/image_category_color"
-        app:layout_constraintBottom_toBottomOf="@id/image_category_color"
-        app:layout_constraintTop_toTopOf="@id/image_category_color"
-        app:layout_constraintEnd_toEndOf="parent"/>
+        app:layout_constraintTop_toBottomOf="@id/category_name_layout"
+        app:layout_constraintEnd_toEndOf="@id/category_name_layout"/>
 
     <Button
         android:id="@+id/btn_cancel"
