--- a/app/src/main/res/layout/fragment_new_cart.xml
+++ b/app/src/main/res/layout/fragment_new_cart.xml
@@ -4,7 +4,6 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:padding="16dp"
     tools:context="br.com.zamfir.comprarei.view.fragments.NewCartFragment">
 
     <DatePicker
@@ -13,7 +12,7 @@
         android:layout_height="wrap_content"
         android:headerBackground="@color/secondary_green"
         android:visibility="gone"
-        tools:visibility="gone"
+        tools:visibility="visible"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -24,6 +23,7 @@
         android:id="@+id/new_cart_form"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:padding="16dp"
         android:visibility="visible">
 
         <TextView
