--- a/app/src/main/res/menu/menu.xml
+++ b/app/src/main/res/menu/menu.xml
@@ -6,12 +6,12 @@
         android:id="@+id/search_menu"
         android:icon="@drawable/ic_search_24"
         android:title="@string/search"
-        app:showAsAction="ifRoom|collapseActionView"/>
+        app:showAsAction="ifRoom"/>
 
     <item
-        android:id="@+id/delete_menu"
-        android:icon="@drawable/ic_delete_24"
-        android:title="@string/delete"
+        android:id="@+id/categories_menu"
+        android:icon="@drawable/category_icon_24_white"
+        android:title="@string/categories"
         app:showAsAction="never"/>
 
     <item
@@ -21,16 +21,31 @@
         app:showAsAction="never"/>
 
     <item
+        android:id="@+id/delete_menu"
+        android:icon="@drawable/ic_delete_24"
+        android:title="@string/delete"
+        app:showAsAction="never"/>
+
+
+    <item
         android:id="@+id/share_menu"
         android:icon="@drawable/ic_share_24"
         android:title="@string/share"
         android:visible="false"
-        app:showAsAction="always|collapseActionView"/>
+        app:showAsAction="ifRoom"/>
 
     <item
         android:id="@+id/select_all"
         android:icon="@drawable/outline_check_box_24"
         android:title="Select all"
         android:visible="false"
-        app:showAsAction="never|collapseActionView"/>
+        app:showAsAction="ifRoom"/>
+
+    <item
+        android:id="@+id/cancel_action"
+        android:icon="@drawable/ic_baseline_close_24"
+        android:visible="false"
+        android:title="@string/cancel"
+        app:showAsAction="ifRoom"/>
+
 </menu>
