Features : - New feature of sort and filter in carts; - New sort logic in products;

--- a/app/src/main/res/layout/bottom_sheet_new_product.xml
+++ b/app/src/main/res/layout/bottom_sheet_new_product.xml
@@ -43,6 +43,7 @@
             android:id="@+id/product_name"
             android:imeOptions="actionNext"
             android:singleLine="true"
+            android:inputType="textCapSentences|text"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"/>
     </com.google.android.material.textfield.TextInputLayout>
@@ -63,6 +64,7 @@
             android:id="@+id/productBrand"
             android:imeOptions="actionNext"
             android:singleLine="true"
+            android:inputType="textCapSentences|text"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"/>
     </com.google.android.material.textfield.TextInputLayout>
