--- a/app/src/main/res/layout/google_login_btn.xml
+++ b/app/src/main/res/layout/google_login_btn.xml
@@ -3,6 +3,7 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:gravity="top|center_horizontal"
+    android:clickable="true"
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <androidx.constraintlayout.widget.ConstraintLayout
