chore : Fixed logic of user logged state, and sign-out functionality

--- a/app/src/main/res/menu/menu.xml
+++ b/app/src/main/res/menu/menu.xml
@@ -48,4 +48,9 @@
         android:title="@string/cancel"
         app:showAsAction="ifRoom"/>
 
+    <item
+        android:id="@+id/log_off"
+        android:title="Logoff"
+        app:showAsAction="never"/>
+
 </menu>
