--- a/app/src/main/res/layout/dialog_new_category.xml
+++ b/app/src/main/res/layout/dialog_new_category.xml
@@ -22,9 +22,9 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:src="@drawable/ic_delete_24"
-        android:layout_margin="12dp"
         android:background="@color/white"
         android:visibility="gone"
+        android:layout_marginTop="4dp"
         tools:visibility="visible"
         app:tint="?attr/colorPrimary"
         app:layout_constraintEnd_toEndOf="parent"
