--- a/app/src/main/res/layout/fragment_login.xml
+++ b/app/src/main/res/layout/fragment_login.xml
@@ -70,11 +70,13 @@
     </com.google.android.material.textfield.TextInputLayout>
 
     <TextView
+        android:id="@+id/forgot_password"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/forgot_password"
         android:alpha="0.6"
         android:layout_marginTop="4dp"
+        android:clickable="true"
         android:textAllCaps="false"
         app:layout_constraintTop_toBottomOf="@id/password_layout"
         app:layout_constraintEnd_toEndOf="@id/password_layout"/>
@@ -82,7 +84,7 @@
     <com.google.android.material.button.MaterialButton
         android:id="@+id/btn_login"
         android:layout_width="0dp"
-        android:layout_height="wrap_content"
+        android:layout_height="62dp"
         app:cornerRadius="8dp"
         android:textAllCaps="false"
         app:layout_constraintEnd_toEndOf="@id/password_layout"
@@ -90,6 +92,28 @@
         app:layout_constraintTop_toBottomOf="@id/password_layout"
         android:layout_marginTop="36dp"
         android:text="@string/log_in"/>
+
+    <LinearLayout
+        android:id="@+id/loading_btn"
+        android:layout_width="0dp"
+        android:layout_height="51dp"
+        android:gravity="center"
+        android:visibility="gone"
+        tools:visibility="visible"
+        android:background="@drawable/btn_loading_background"
+        app:layout_constraintTop_toTopOf="@id/btn_login"
+        app:layout_constraintEnd_toEndOf="@id/btn_login"
+        app:layout_constraintStart_toStartOf="@id/btn_login"
+        app:layout_constraintBottom_toBottomOf="@id/btn_login"
+        android:orientation="horizontal">
+
+       <com.google.android.material.progressindicator.CircularProgressIndicator
+           android:layout_width="match_parent"
+           android:layout_height="56dp"
+           android:indeterminate="true"
+           app:indicatorColor="@color/white"
+           app:indicatorSize="32dp"/>
+    </LinearLayout>
 
     <TextView
         android:id="@+id/or_lbl"
