--- a/app/src/main/res/layout/fragment_new_cart.xml
+++ b/app/src/main/res/layout/fragment_new_cart.xml
@@ -12,7 +12,8 @@
         android:layout_height="wrap_content"
         android:headerBackground="@color/secondary_green"
         android:visibility="gone"
-        tools:visibility="gone"
+        tools:visibility="visible"
+        android:backgroundTint="@color/white"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -39,8 +40,10 @@
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="(Required)"
+            android:text="@string/required"
             android:textSize="12sp"
+            android:textColor="@color/black"
+            android:alpha="0.3"
             app:layout_constraintBottom_toTopOf="@id/cart_name_layout"
             app:layout_constraintEnd_toEndOf="@id/cart_name_layout"/>
 
