--- a/app/src/main/res/layout/fragment_sigin.xml
+++ b/app/src/main/res/layout/fragment_sigin.xml
@@ -72,28 +72,125 @@
             tools:text="João Felipe" />
     </com.google.android.material.textfield.TextInputLayout>
 
-    <com.google.android.material.textfield.TextInputLayout
-        android:id="@+id/password_first_layout"
-        style="@style/MyLoginTextStyle"
-        android:layout_width="0dp"
+
+    <LinearLayout
+        android:id="@+id/password_placeholder"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="12dp"
-        app:passwordToggleEnabled="true"
+        android:orientation="vertical"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/user_layout"
-        android:background="@drawable/login_inputtext_background"
-        app:startIconDrawable="@drawable/lock_black_24dp">
+        app:layout_constraintTop_toBottomOf="@id/user_layout">
 
-        <com.google.android.material.textfield.TextInputEditText
-            android:id="@+id/password_first"
+        <com.google.android.material.textfield.TextInputLayout
+            android:id="@+id/password_first_layout"
+            style="@style/MyLoginTextStyle"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:hint="@string/password_hint"
-            android:inputType="textPassword"
-            tools:text="123454"
-            android:maxLines="1"/>
-    </com.google.android.material.textfield.TextInputLayout>
+            android:layout_marginTop="12dp"
+            app:passwordToggleEnabled="true"
+            android:layout_marginBottom="8dp"
+            android:background="@drawable/login_inputtext_background"
+            app:startIconDrawable="@drawable/lock_black_24dp">
+
+            <com.google.android.material.textfield.TextInputEditText
+                android:id="@+id/password_first"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:hint="@string/password_hint"
+                android:inputType="textPassword"
+                tools:text="123454"
+                android:maxLines="1"/>
+        </com.google.android.material.textfield.TextInputLayout>
+
+        <LinearLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:gravity="center">
+
+            <ImageView
+                android:id="@+id/img_err_qnt_char"
+                android:layout_width="16dp"
+                android:layout_height="16dp"
+                android:src="@drawable/ic_baseline_close_24"
+                app:tint="@color/delete_red"/>
+
+            <ImageView
+                android:id="@+id/img_ok_qnt_char"
+                android:layout_width="16dp"
+                android:layout_height="16dp"
+                android:visibility="gone"
+                android:src="@drawable/ic_baseline_done_24"
+                app:tint="@color/primary_green"/>
+
+            <TextView
+                android:id="@+id/txv_qnt_char"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textSize="11sp"
+                android:text="@string/six_chars_hint"
+                android:textColor="@color/delete_red"/>
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:gravity="center">
+
+            <ImageView
+                android:id="@+id/img_err_uppercase"
+                android:layout_width="16dp"
+                android:layout_height="16dp"
+                android:src="@drawable/ic_baseline_close_24"
+                app:tint="@color/delete_red"/>
+
+            <ImageView
+                android:id="@+id/img_ok_uppercase"
+                android:layout_width="16dp"
+                android:layout_height="16dp"
+                android:visibility="gone"
+                android:src="@drawable/ic_baseline_done_24"
+                app:tint="@color/primary_green"/>
+
+            <TextView
+                android:id="@+id/txv_uppercase"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textSize="11sp"
+                android:text="@string/uppercase_hint"
+                android:textColor="@color/delete_red"/>
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:gravity="center">
+
+            <ImageView
+                android:id="@+id/img_err_number"
+                android:layout_width="16dp"
+                android:layout_height="16dp"
+                android:src="@drawable/ic_baseline_close_24"
+                app:tint="@color/delete_red"/>
+
+            <ImageView
+                android:id="@+id/img_ok_number"
+                android:layout_width="16dp"
+                android:layout_height="16dp"
+                android:visibility="gone"
+                android:src="@drawable/ic_baseline_done_24"
+                app:tint="@color/primary_green"/>
+
+            <TextView
+                android:id="@+id/txv_number"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textSize="11sp"
+                android:text="@string/number_hint"
+                android:textColor="@color/delete_red"/>
+        </LinearLayout>
+    </LinearLayout>
+
 
     <com.google.android.material.textfield.TextInputLayout
         android:id="@+id/password_second_layout"
@@ -104,7 +201,7 @@
         app:passwordToggleEnabled="true"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/password_first_layout"
+        app:layout_constraintTop_toBottomOf="@id/password_placeholder"
         android:background="@drawable/login_inputtext_background"
         app:startIconDrawable="@drawable/lock_black_24dp">
 
@@ -112,7 +209,7 @@
             android:id="@+id/password_second"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:hint="Digite novamente a senha"
+            android:hint="@string/reenter_password"
             android:inputType="textPassword"
             tools:text="123454"
             android:maxLines="1"/>
@@ -128,6 +225,6 @@
         app:layout_constraintStart_toStartOf="@id/password_second_layout"
         app:layout_constraintTop_toBottomOf="@id/password_second_layout"
         android:layout_marginTop="24dp"
-        android:text="Create account"/>
+        android:text="@string/create_account"/>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
