--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources xmlns:tools="http://schemas.android.com/tools">
-    <color name="primary_green">#96AC60</color>
-    <color name="secondary_green">#606D40</color>
+    <color name="primary_green">#186F35</color>
+    <color name="secondary_green">#478D5F</color>
     <color name="_green">#2AA653</color>
     <color name="secundary_green_transparent">#4D606D40</color>
     <color name="black">#FF000000</color>
